Fixed CSS issue on dashboard (recipe card not centered)

--- a/frontend/src/components/RecipeCard/RecipeCardContainer.module.css
+++ b/frontend/src/components/RecipeCard/RecipeCardContainer.module.css
@@ -1,13 +1,11 @@
 .search_container {
-  width: 100%;
-  width: 1200px;
+  display: flex;
+  justify-content: center;
   margin: 30px auto;
   padding: 1em 15em;
   text-align: center;
   border-radius: 1em;
   backdrop-filter: blur(5px);
-  /* background-color: rgba(255, 255, 255); */
-  padding-left: 175px;
 }
 
 .book_container {
