--- a/frontend/src/components/UI/Card.module.css
+++ b/frontend/src/components/UI/Card.module.css
@@ -1,5 +1,4 @@
 .card {
-    width: 100%;
     width: 851px;
     max-width: 851px;
     background: white;
